--- a/micro-service/src/main/resources/application.properties
+++ b/micro-service/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+# ????
+server.port=8888 
+# ?????????????
+spring.application.name=hello
 
+# ?????
+# ?? @Value("${book.name}") ????(????SpEL???)
+book.name=SpringCloudAction
+book.author=ZhaiYongchao
+# ????
+book.desc=${book.author} is writing ?${book.name}?
+
+# ?????
+# ???
+com.didispace.blog.value=${random.value}
+# int
+com.didispace.blog.number=${random.int}
+# long
+com.didispace.blog.bignumber=${random.long}
+# 10?????
+com.didispace.blog.test1=${random.int(10)}
+# 10~20???
+com.didispace.blog.test2=${random.int[10,20]}
